More design overhauls. fixed corners on collapse open, gradient background-colors.

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -70,10 +70,18 @@ a
   padding-left: 75px;
   padding-right: 75px;
   border: 1px solid #A2A2A2;
-  border-bottom: 2px solid #BBB;
+  border-bottom: 1px solid #BBB;
   border-top-left-radius: 50px 25px;
   border-top-right-radius: 50px 25px;
-  background-color: #D5D5D5;
+  background: #eeeeee; /* Old browsers */
+  background: -moz-linear-gradient(top,  #eeeeee 0%, #cccccc 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#eeeeee), color-stop(100%,#cccccc)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #eeeeee 0%,#cccccc 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #eeeeee 0%,#cccccc 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #eeeeee 0%,#cccccc 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #eeeeee 0%,#cccccc 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
+
 }
 
 #navbar a:visited
@@ -126,7 +134,7 @@ a
   border-right: 1px solid #BBB;
   width: 300px;
   margin: 0px auto;
-  background-color: #EEE;
+  background-color: #EFEFEF;
   padding: 25px;
   padding-left: 35px;
   padding-right: 35px;
@@ -166,9 +174,18 @@ a
 .collapsibleContainerTitle div
 {
   padding: 5px;
-  background-color: #64CFDB;
   border-radius: 4px;
   color: #333;
+  background: #65dddf; /* Old browsers */
+  background: -moz-linear-gradient(top,  #65dddf 0%, #42d0d2 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#65dddf), color-stop(100%,#42d0d2)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #65dddf 0%,#42d0d2 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #65dddf 0%,#42d0d2 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #65dddf 0%,#42d0d2 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #65dddf 0%,#42d0d2 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#65dddf', endColorstr='#42d0d2',GradientType=0 ); /* IE6-9 */
+
+
 }
 
 .collapsibleContainerContent
@@ -184,6 +201,7 @@ a
   height: 2.8%;
   position: relative;
   top: 4px;
+  opacity: .6;
 }
 
 #ui-datepicker-div
